# partial-fill

./: partial-fill.cabal  stack.yaml
src/: Main.hs
