name:                partial-fill
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/k-bx/partial-fill#readme
license:             BSD3
license-file:        LICENSE
author:              Kostiantyn Rybnikov
maintainer:          k-bx@k-bx.com
copyright:           Kostiantyn Rybnikov &lt;k-bx@k-bx.com&gt;
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable partial-fill
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , type-level-sets >= 0.5.0.1
